# bobinator

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
.github/workflows/: CI.yml  gh_pages.yml  publish.yml
bobinator/: all.html  constant.CALENDAR_WIDTH.html  enum.APITokenScope.html  enum.ApprovalState.html  enum.BobinatorError.html  enum.DatePortion.html  enum.DateRangeType.html  enum.RequestRangeType.html  enum.TimeoffPolicyType.html  enum.UserInput.html  enum.ValidationMessages.html  fn.flush_stdout.html  fn.prompt_password.html  index.html  sidebar-items.js  struct.APIToken.html  struct.APITokenOnly.html  struct.CalculateTimeoffResponse.html  struct.Connection.html  struct.Credentials.html  struct.DEFAULT_ACCEPT.html  struct.DEFAULT_ACCEPT_ENCODING.html  struct.DEFAULT_ACCEPT_LANGUAGE.html  struct.DEFAULT_CONNECTION.html  struct.DEFAULT_ORIGIN.html  struct.DEFAULT_REFERER.html  struct.DEFAULT_TE.html  struct.DEFAULT_USER_AGENT.html  struct.DateRange.html  struct.Employee.html  struct.Headers.html  struct.LoginSession.html  struct.Metadata.html  struct.Timeoff.html  struct.TimeoffRequest.html  struct.UnexpectedError.html  struct.ValidationMessage.html  struct.WeekdayInterval.html  struct.WeekdayIntervalIter.html  trait.CalendarMonthShiftModifier.html  (+10 more)
bobinator/app/: fn.check_token.html  fn.fetch_update_and_store_token.html  fn.get_token_or_login.html  fn.login_prompt.html  fn.menu.html  fn.read_token.html  fn.run.html  fn.save_token.html  fn.try_login.html  index.html  sidebar-items.js  struct.MENU_PROMPT.html  struct.PROMPT_FOR_COMMAND.html
bobinator/bob/: fn._change_token_scope.html  fn._logout.html  fn.change_token_scope.html  fn.get_employee_by_id.html  fn.get_token_scope.html  fn.login.html  fn.logout.html  index.html  sidebar-items.js  struct.ScopeRequest.html
bobinator/consts/: index.html  sidebar-items.js  struct.BOBINATOR_NAME.html  struct.BOB_LOGO.html  struct.EMAIL_PATTERN.html  struct.MODIFIER_EMPHASIS.html  struct.MODIFIER_WARNING.html  struct.PROMPT_FOR_ONE_TIME_TOKEN_FETCH.html  struct.PROMPT_FOR_PASSWORD_LOGIN.html  struct.STANDARD_LINES.html
bobinator/employee/: index.html  sidebar-items.js  struct.About.html  struct.Communication.html  struct.Employee.html  struct.EmployeeProxy.html  struct.Personal.html  struct.SocialData.html  struct.Work.html
bobinator/structs/: enum.APITokenScope.html  enum.BobinatorError.html  struct.UnexpectedError.html
bobinator_macros/: Cargo.toml
bobinator_macros/src/: lib.rs
bobinator_models/: Cargo.toml
bobinator_models/src/: lib.rs
bobinator_models/src/func/: mod.rs  response_handling.rs
bobinator_models/src/structs/: api_token_scope.rs  errors.rs  mod.rs  unexpected_error.rs
bobinator_models/src/traits/: bob_json.rs  mod.rs
implementors/lazy_static/: trait.LazyStatic.js
search.desc/bobinator/: bobinator-desc-0-.js
src/: _credentials.rs  lib.rs  main.rs
src/app/: api_token.rs  app.rs  config.rs  login.rs  menu.rs  mod.rs
src/bob/: api_token.rs  dayoff.rs  employee.rs  login.rs  mod.rs  timeoff.rs
src/bobinator/: lib.rs.html
src/common/: consts.rs  flush_stdout.rs  input.rs  join.rs  mod.rs  titlecase.rs
src/engine/: connection.rs
src/structs/: errors.rs  mod.rs
src/traits/: calendar_shift.rs  has_date.rs  has_date_range.rs  has_employee_id.rs  has_token.rs  mod.rs
tests/: mod.rs
(+331 files in other folders)
