[package]
name = "bobinator"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bobinator"

[[bin]]
name = "bobinator"

[features]
trace = ["bobinator_macros/trace", "bobinator_models/trace"]

[dependencies]
async-trait = { version = "0" }
bobinator_models = { path = "./bobinator_models" }
bobinator_macros = { path = "./bobinator_macros" }
conch = { git = "https://github.com/denwong47/conch", branch = "development", features = ["calendar"] }
chrono = { version = "0", features = ["serde"] }
crossterm = { version = "0" }
directories = { version = "4" }
enum_index = { git = "https://github.com/denwong47/enum_index", branch = "development" }
futures = { version = "0" }
lazy_static = "1"
num-traits = { version = "0" }
rayon = "1"
regex = "1"
reqwest = { version = "0", features = ["cookies", "json", "gzip"] }
rpassword = { version = "7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { version = "1" }
tokio = { version = "1", features = ["full"] }

[profile.release]
strip = true
opt-level = "z"
