[package]
name = "bobinator_models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bobinator_models"

[features]
trace = []

[dependencies]
async-trait = { version = "0" }
enum_index = { git = "https://github.com/denwong47/enum_index", branch = "development" }
reqwest = { version = "0", features = ["cookies", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { version = "1" }
